--- a/jscss/style.css
+++ b/jscss/style.css
@@ -52,3 +52,12 @@ body {
 #tweetBox {
     width: 100%;
 }
+#ticker {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 10px;
+    border-radius: 8px;
+    background: yellow;
+}
