--- a/jscss/style.css
+++ b/jscss/style.css
@@ -5,6 +5,7 @@ body {
     text-align: center;
 }
 #content-wrapper {
+    position: relative;
     background: rgba(10,10,10,0.8);
     padding: 60px 25px;
     width: 900px;
@@ -42,7 +43,7 @@ body {
     padding: 5px;
 }
 .tweet {
-    margin: 5px 10px 23px 10px;
+    padding: 5px 10px 23px 10px;
     border-bottom: 1px dashed black;
 }
 .user {
@@ -71,4 +72,10 @@ div.sector {
 }
 .timestamp {
     float: right;
+}
+.listing:nth-child(odd) {
+    background: #f3f3f3;
+}
+.tweet:hover {
+    background: #d3d3d3;
 }
