--- a/jscss/style.css
+++ b/jscss/style.css
@@ -63,10 +63,10 @@ body {
 #logoutButton {
     float: right;
 }
-div.sector.active {
+.sector.active {
     display: block;
 }
-div.sector {
+.sector {
     display: none;
 }
 .timestamp {
@@ -103,4 +103,10 @@ div.sector {
     bottom: 0;
     overflow-x: hidden;
     overflow-y: scroll;
+}
+.searchContainer {
+    display: none;
+}
+.searchContainer.active {
+    display: block;
 }
