--- a/jscss/style.css
+++ b/jscss/style.css
@@ -94,13 +94,12 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-top: -150px;
-    margin-left: -250px;
-    height: 300px;
-    width: 500px;
+    margin-top: -40px;
+    margin-left: -200px;
+    height: 80px;
+    width: 400px;
     display: none;
     border: 10px solid rgba(82, 82, 82, 0.7);
-    padding: 10px;
     border-radius: 8px;
 }
 #popupInner {
@@ -110,13 +109,16 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    text-align: center;
+}
+#popupContainer {
+    margin: 10px;
+    text-align: left;
 }
 #closeButtonPop {
     position: absolute;
     margin-top: -10px;
-    margin-left: 440px;
+    margin-left: 360px;
     padding: 10px;
     z-index: 100;
 }
