--- a/jscss/style.css
+++ b/jscss/style.css
@@ -132,9 +132,11 @@ body {
     width: 860px;
     float: left;
 }
-.gravatar {
+.avatar {
     margin-right: 15px;
     float: left;
+    height: 64px;
+    width: 64px;
 }
 .user a {
     font-size: 16px;
