Added bookmark and some changes in edit profile

--- a/jscss/style.css
+++ b/jscss/style.css
@@ -152,3 +152,10 @@ input[type=text], input[type=password] {
 #messageClose {
     float: right;
 }
+#bookmarkList {
+    list-style: none;
+    margin: 10px;
+}
+#bookmarkList li {
+    margin: 3px;
+}
